feat: :sparkles: implementation functions for all users
Implementando funções para buscar todos os usuarios
